--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,7 @@
+:root{
+  --primary-color: rgb(255, 0, 242);
+}
+
 .results {
   display: grid;
   column-gap: 14px;
@@ -14,11 +18,11 @@
    display: inline-block;
    width: 30%;
   }
-  button {
+ button{
   padding: 10px;
    border: solid 1px var(--primary-color);
    background: var(--primary-color);
-   color: white;
+   color: rgb(226, 17, 17);
    border-radius: 8px;
   }
   @media (min-width: 500px) and (max-width: 768px) {
